since GMF Runtime is 1.4, we'd better strive for consistency and not use Java 5 unless needed